<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:clickable="true">

    <ImageView
        android:id="@+id/circle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/avatar"
        android:clickable="true"
        android:contentDescription="@string/avatarFrame" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/circle"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:text="@string/contact_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userLetter"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:text="@string/l"
        android:gravity="center"
        android:textSize="23sp"
        android:textColor="@color/white"/>

</RelativeLayout>